cambios tercera pre entrega

--- a/.env
+++ b/.env
@@ -2,7 +2,9 @@ PORT = 8080
 MONGO_URL = mongodb+srv://rodrigovazquez99:BcKutvT3FsEJwAOL@cluster0.y15gbah.mongodb.net/?retryWrites=true&w=majority
 MONGO_SECRET = mongoSecret
 ADMIN_EMAIL = adminCoder@coder.com
+ADMIN_PASSWORD = coderAdmin
 CLIENT_ID = Iv1.4941235288435e20
 CLIENT_SECRET = 270cd3d70a02fa688728054407763b05454ad011
 CALLBACK_URL = http://localhost:8080/api/sessions/githubcallback
 PASSWORD_GITHUB = github1234
+SECRET_OR_KEY = coderSecret
