implementacion de logger

--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ CLIENT_SECRET = 270cd3d70a02fa688728054407763b05454ad011
 CALLBACK_URL = http://localhost:8080/api/sessions/githubcallback
 PASSWORD_GITHUB = github1234
 SECRET_OR_KEY = coderSecret
+ENVIRONMENT = PRODUCTION
