mejorando el codigo

--- a/.env
+++ b/.env
@@ -9,3 +9,9 @@ CALLBACK_URL = http://localhost:8080/api/sessions/githubcallback
 PASSWORD_GITHUB = github1234
 SECRET_OR_KEY = coderSecret
 ENVIRONMENT = PRODUCTION
+PREMIUM_EMAIL = premium@gmail.com
+PREMIUM_PASSWORD = premium
+EMAIL_FROM = colo.202019@gmail.com
+TRANSPORT_SERVICE = gmail
+TRANSPORT_PORT = 587
+TRANSPORT_PASS = jgbohsuyqpxdpgpi
