--- a/.env
+++ b/.env
@@ -1,17 +1,21 @@
-PORT = 8080 
-MONGO_URL = mongodb+srv://rodrigovazquez99:BcKutvT3FsEJwAOL@cluster0.y15gbah.mongodb.net/?retryWrites=true&w=majority
-MONGO_SECRET = mongoSecret
 ADMIN_EMAIL = adminCoder@coder.com
 ADMIN_PASSWORD = coderAdmin
+CALLBACK_URL = http://localhost:8080/api/sessions/githubcallback
 CLIENT_ID = Iv1.4941235288435e20
 CLIENT_SECRET = 270cd3d70a02fa688728054407763b05454ad011
-CALLBACK_URL = http://localhost:8080/api/sessions/githubcallback
-PASSWORD_GITHUB = github1234
-SECRET_OR_KEY = coderSecret
+CODER_COOKIE = coderCookie
+EMAIL_FROM = colo.202019@gmail.com
 ENVIRONMENT = PRODUCTION
+MONGO_SECRET = mongoSecret
+MONGO_URL = mongodb+srv://rodrigovazquez99:BcKutvT3FsEJwAOL@cluster0.y15gbah.mongodb.net/?retryWrites=true&w=majority
+PASSWORD_GITHUB = github1234
+PORT = 8080 
 PREMIUM_EMAIL = premium@gmail.com
 PREMIUM_PASSWORD = premium
-EMAIL_FROM = colo.202019@gmail.com
-TRANSPORT_SERVICE = gmail
-TRANSPORT_PORT = 587
+SECRET_OR_KEY = coderSecret
+TKN_RESET = tokenReset
 TRANSPORT_PASS = jgbohsuyqpxdpgpi
+TRANSPORT_PORT = 587
+TRANSPORT_SERVICE = gmail
+
+
